<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/colorPrimaryDark">
    <TableRow
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="2">
        <EditText
            android:id="@+id/editText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:maxLength="18"
            android:background="@color/colorPrimaryDark"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/buttonTextWhite"
            />
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonPercentage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/percentage"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/sqrt"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/buttonSquare"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/x2"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonInverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1_x"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/buttonAllClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="allClear"
            android:text="@string/allClear"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="clear"
            android:text="@string/c"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"

            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonMemo"
            android:onClick="memo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/history"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:onClick="division"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/orange"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button7"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/seven"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/button8"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/button9"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mul"
            android:onClick="multiplication"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/orange"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/four"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/button5"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/five"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/button6"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonSub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:onClick="minus"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/orange"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="textAppend"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/one"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:onClick="textAppend"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/two"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:onClick="textAppend"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/three"
            android:textColor="@color/buttonTextWhite" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:onClick="plus"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:text="@string/add"
            android:textColor="@color/buttonTextWhite" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <Button
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:layout_weight="1"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/button0"
            android:onClick="textAppend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="textAppend"
            android:text="@string/dot"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:background="@color/buttonBackgroundBlack"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="calculate"
            android:text="@string/equal"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:textColor="@color/buttonTextWhite"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>

    </TableRow>

    </TableLayout>